--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ forge*changelog.txt
 # Project
 libs/
 src/generated/resources/.cache/
+
+.gitattributes
+.gitignore
+CREDITS.txt
+LICENSE.txt
+README.txt
+changelog.txt
+gradle.properties
+gradlew
+gradlew.bat
